fix: visibilize apendice costos

--- a/src/assets/css/menu.css
+++ b/src/assets/css/menu.css
@@ -13,8 +13,7 @@
     }
 
     .isologo-comunidad-dezzpo {
-        height: 45px !important;
-        width: 110px !important;
+        display: none !important;
     }
 
     .menuFijo {
@@ -97,6 +96,10 @@
 }
 
 @media screen and (min-width: 600px) and (max-width: 900px) {
+    .isologo-comunidad-dezzpo {
+        height: 45px !important;
+        width: 110px !important;
+    }
 }
 
 @media screen and (min-width: 900px) {
@@ -110,6 +113,7 @@
     height: 45px;
     width: 160px;
     padding: '5px 10px';
+    display: inline;
 }
 
 .logo-comunidad-dezzpo {
